<?xml version="1.0" encoding="utf-8"?>


<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/VisitorImageId"
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:srcCompat="@drawable/ic_baseline_add_photo_alternate_24"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                />

            <EditText
                android:id="@+id/VisitorNameId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="15"
                android:background="@drawable/rounded"
                android:layout_marginBottom="4dp"
                android:hint=" Name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                />

            <EditText
                android:id="@+id/VisitorICId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="15"
                android:background="@drawable/rounded"
                android:layout_marginBottom="4dp"
                android:hint=" IC number"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/VisitorPhoneId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="15"
                android:background="@drawable/rounded"
                android:layout_marginBottom="4dp"
                android:hint=" Phone number (Enter 01...without +6)"
                android:inputType="phone"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/VisitReasonId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="15"
                android:background="@drawable/rounded"
                android:layout_marginBottom="4dp"
                android:hint=" Reason for visit"
                android:inputType="text"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/VisitDateId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint=" Visit date"
                android:inputType="date"
                android:ems="15"
                android:background="@drawable/rounded"
                android:layout_marginBottom="4dp"
                android:focusable="false"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/VisitTimeId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint=" Visit time"
                android:inputType="time"
                android:ems="15"
                android:background="@drawable/rounded"
                android:layout_marginBottom="4dp"
                android:focusable="false"
                android:minHeight="48dp"
                />

            <EditText
                android:id="@+id/VisitExitTimeId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint=" Visit exit time"
                android:inputType="time"
                android:ems="15"
                android:background="@drawable/rounded"
                android:layout_marginBottom="4dp"
                android:focusable="false"
                android:minHeight="48dp"
                />

            <TextView
                android:id="@+id/labelTicket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/ticketLabel"/>

            <TextView
                android:id="@+id/GeneratedVisitorTicketId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="50dp"
                android:textIsSelectable="true"
                />

            <Button
                android:id="@+id/GenerateTicketBtnId"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="@string/GenerateTicket"
                android:background="@drawable/rounded_button"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="5dp"
                android:visibility="invisible" />

            <Button
                android:id="@+id/SubmitRequestBtnId"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="@string/SubmitRequestVisit"
                android:background="@drawable/rounded_button"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="5dp"
                android:visibility="invisible" />

            <Button
                android:id="@+id/BackToMainBtnId"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="@string/BackToMainBtn"
                android:background="@drawable/rounded_button"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:visibility="invisible" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        </ProgressBar>



    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>