...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:visibility="invisible" />

                <EditText
                    android:id="@+id/VisitorTicketId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="14"
                    android:background="@drawable/rounded"
                    android:hint=" Enter saved ticket number here"
                    android:inputType="number"
...
