<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="Did not turn up"
        android:background="@color/purple_500"
        android:textSize="25dp"
        android:gravity="center"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10dp"
        android:visibility="invisible" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:text="Confirm No Show"
        android:textSize="22dp"
        android:background="@drawable/rounded_button"
        android:gravity="center"
        android:id="@+id/btnConfirmNoShow"/>


</LinearLayout>