<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <Button
        android:id="@+id/goAdminLogin"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="Login Admin"
        android:background="@drawable/rounded_button"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:visibility="invisible" />

    <Button
        android:id="@+id/goOfficerLogin"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="Login Officer"
        android:background="@drawable/rounded_button"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:visibility="invisible" />

    <Button
        android:id="@+id/goGuardLogin"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="Login Guard "
        android:background="@drawable/rounded_button"
        />

</LinearLayout>